support jdk18, also allow enable/disable of security manager.
Signed-off-by: gurunrao <gurunandan.rao@oracle.com>